# DiffusionPen

./: pyproject.toml
diffusionpen/: feature_extractor.py  index2letter.json  letter2index.json  style_encoder_train.py  train.py  unet.py
diffusionpen/utils/: GNHK_dataset.py  iam_dataset.py  word_dataset.py
