[tool.poetry]
name = "diffusionpen"
version = "0.1.0"
description = ""
authors = ["Matthijs <matthijs.vanderlende@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.6.0"
torchvision = "0.21.0"
diffusers = "^0.33.1"
transformers = "^4.51.3"
accelerate = "^1.6.0"
timm = "^1.0.15"
einops = "^0.8.1"
omegaconf = "^2.3.0"
tqdm = "^4.67.1"
numpy = "^2.2.5"
scikit-image = "^0.25.2"
opencv-python = "^4.11.0.86"
pillow = "^11.2.1"
wandb = "^0.19.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
